[package]
name = "hackattic_rust_refactor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "*", features = ["json", "blocking"] }
dotenv = "0.15.0"
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.2"
opencv= {version = "0.92.2"}
futures-io = { version = "0.2.0-beta" }