[package]
name = "reading_qr"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.2"
opencv= {version = "0.92.2"}
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
